CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(GlGame)

# prerequired
FIND_PACKAGE(OpenGL REQUIRED)

# Settings

SET(EXTERNAL_DIRECTIRY ${CMAKE_SOURCE_DIR}/external)
SET(SRC_DIRECTORY   ${CMAKE_SOURCE_DIR}/src)

SET(SOURCE_DIRECTORY ${SRC_DIRECTORY}/source)
SET(HEADER_DIRECTORY ${SRC_DIRECTORY}/header)

FILE(GLOB_RECURSE PROJECT_SOURCE ${SOURCE_DIRECTORY}/*.cpp ${SOURCE_DIRECTORY}/*.c)
FILE(GLOB_RECURSE PROJECT_HEADER ${HEADER_DIRECTORY}/*.h ${HEADER_DIRECTORY}/*.hpp)

SET(GLEW_INCLUDE ${EXTERNAL_DIRECTIRY}/glew-2.1.0/include)
SET(GLFW_INCLUDE ${EXTERNAL_DIRECTIRY}/glfw-3.2.1/include)
SET(GLM_INCLUDE  ${EXTERNAL_DIRECTIRY}/glm-0.9.9.5/glm)

SET(LIBS glew glfw ${OPENGL_LIBRAIRY})

# Subdirectories

ADD_SUBDIRECTORY(${SRC_DIRECTORY})
ADD_SUBDIRECTORY(${EXTERNAL_DIRECTIRY})

# Include directories

INCLUDE_DIRECTORIES(
  ${SOURCE_DIRECTORY}
  ${HEADER_DIRECTORY}
  ${GLEW_INCLUDE}
  ${GLFW_INCLUDE}
  ${GLM_INCLUDE}
)

ADD_DEFINITIONS(
  -Dglew
)

# Executable

ADD_EXECUTABLE(gl ${PROJECT_SOURCE} ${PROJECT_HEADER})

# Link libraries

TARGET_LINK_LIBRARIES(gl ${LIBS})
