# Settings
SET(SOURCE_LOCATION source)
SET(HEADER_LOCATION header)

FILE(GLOB_RECURSE PROJECT_SOURCE *.cpp *.c)
FILE(GLOB_RECURSE PROJECT_HEADER *.h *.hpp)

# Include directories
INCLUDE_DIRECTORIES(${SOURCE_LOCATION} ${HEADER_LOCATION})

# Create executable
ADD_EXECUTABLE(main ${PROJECT_SOURCE} ${PROJECT_HEADER})
